This clarifies a weird and still awkward and confusing part

--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -529,16 +529,22 @@ Invalid Email Addresses
 
 
  <div class="buttonfloat">
- <!-- tmpl_unless root_login -->
- 	<p class="error">Disabled. You will need to be logged into this list with the <!-- tmpl_var PROGRAM_NAME --> Root Password.</p>
-<!-- /tmpl_unless --> 
-
-		<p><input type="checkbox" id="fields_options_mode" name="fields_options_mode" value="preserve" <!-- tmpl_unless root_login -->disabled="disabled"<!-- /tmpl_unless --> />
-			<label for="fields_options_mode">
-		Preserve any current Subscriber Profile Fields information
-	</label>
 	
-  </p>
+<!-- tmpl_if can_have_subscriber_fields --> 
+
+	 <!-- tmpl_unless root_login -->
+	 	<p class="error">Disabled. You will need to be logged into this list with the <!-- tmpl_var PROGRAM_NAME --> Root Password.</p>
+	<!-- /tmpl_unless --> 
+
+		<p>
+		 <input type="checkbox" id="fields_options_mode" name="fields_options_mode" value="preserve" <!-- tmpl_unless root_login -->disabled="disabled"<!-- /tmpl_unless --> />
+		  <label for="fields_options_mode">
+		   Preserve any current Subscriber Profile Fields information
+		 </label>	
+		</p>
+
+<!-- /tmpl_if --> 
+
 
   <input type="button" class="cautionary" value="<< Re-Enter Email List" onclick="history.back();return false;" />
 
