--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -90,8 +90,8 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
      </td>
      <td>
       <p>
-<label for="<!-- tmpl_var email -->">
-       <!-- tmpl_var email -->
+<label for="<!-- tmpl_var email  escape="HTML" -->">
+       <!-- tmpl_var email  escape="HTML" -->
 </label>
       </p>
      </td>
@@ -100,7 +100,7 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
         
         <td>
          <p>
-          <!-- tmpl_var value default="&nbsp;"  escape="HTML"  -->
+          <!-- tmpl_var value default="&nbsp;" escape="HTML"  -->
          </p>
         </td>
     <!-- /tmpl_loop --> 
@@ -199,8 +199,8 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
      </td>
      <td>
       <p>
-<label for="<!-- tmpl_var email -->">
-       <!-- tmpl_var email -->
+<label for="<!-- tmpl_var email escape="HTML" -->">
+       <!-- tmpl_var email escape="HTML" -->
 </label>
       </p>
      </td>
@@ -209,7 +209,7 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
         
         <td>
          <p>
-          <!-- tmpl_var value default="&nbsp;"  escape="HTML" -->
+          <!-- tmpl_var value default="&nbsp;" escape="HTML" -->
          </p>
         </td>
     <!-- /tmpl_loop --> 
@@ -301,8 +301,8 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
      </td>
      <td>
       <p>
-<label for="<!-- tmpl_var email -->">
-       <!-- tmpl_var email -->
+<label for="<!-- tmpl_var email escape="HTML" -->">
+       <!-- tmpl_var email escape="HTML" -->
 </label>
       </p>
      </td>
@@ -311,7 +311,7 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
         
         <td>
          <p>
-          <!-- tmpl_var value escape="HTML"  default="&nbsp;"  -->
+          <!-- tmpl_var value escape="HTML" default="&nbsp;"  -->
          </p>
         </td>
     <!-- /tmpl_loop --> 
@@ -409,8 +409,8 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
      </td>
      <td>
       <p>
-<label for="<!-- tmpl_var email -->">
-       <!-- tmpl_var email -->
+<label for="<!-- tmpl_var email escape="HTML" -->">
+       <!-- tmpl_var email escape="HTML" -->
 </label>
       </p>
      </td>
@@ -419,7 +419,7 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
         
         <td>
          <p>
-          <!-- tmpl_var value default="&nbsp;"  escape="HTML"  -->
+          <!-- tmpl_var value default="&nbsp;" escape="HTML"  -->
          </p>
         </td>
     <!-- /tmpl_loop --> 
@@ -492,8 +492,8 @@ Invalid Email Addresses
 &nbsp;     </td>
      <td>
       <p>
-<label for="<!-- tmpl_var email -->">
-       <!-- tmpl_var email -->
+<label for="<!-- tmpl_var email escape="HTML" -->">
+       <!-- tmpl_var email escape="HTML" -->
 </label>
       </p>
      </td>
@@ -502,7 +502,7 @@ Invalid Email Addresses
         
         <td>
          <p>
-          <!-- tmpl_var value default="&nbsp;"   escape="HTML"  -->
+          <!-- tmpl_var value default="&nbsp;" escape="HTML"  -->
          </p>
         </td>
     <!-- /tmpl_loop --> 
