--- a/dada/DADA/Template/templates/sending_monitor_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_screen.tmpl
@@ -1,7 +1,4 @@
-
-
-
-
+<!-- begin sending_monitor_screen.tmpl -->
 
 <p>
 
@@ -100,7 +97,7 @@
 	  <tr> 
 	   <td> 
 	    <h1> 
-	     <!-- tmpl_var name="header_subject_label" ESCAPE="HTML" --> 
+	     <!-- tmpl_var name="header_subject_label" escape="HTML" --> 
 	    </h1> 
 	   </td>
 	   <td> 
@@ -383,10 +380,5 @@
     <!-- /tmpl_if --> 
 
 <!--/tmpl_if --> 
-
-
- 
-
-
 
 <!-- end sending_monitor_screen.tmpl --> 
