--- a/dada/DADA/Template/templates/setup_info_screen.tmpl
+++ b/dada/DADA/Template/templates/setup_info_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin setup_info_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="setup_info_screen" -->
+<!-- tmpl_set name="title" value="<!-- tmpl_var PROGRAM_NAME --> Setup Information" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
 <h1>Installation and Configuration</h1> 
