Closes #126 The, "what_is_dada_mail" is completely out of date.

--- a/dada/DADA/Template/templates/what_is_dada_mail.tmpl
+++ b/dada/DADA/Template/templates/what_is_dada_mail.tmpl
@@ -4,32 +4,25 @@
 
 <h1>Dada Mail - Write Once: Distribute Everywhere </h1>
 
-
 <p>
+	<a href="http://dadamailproject.com/download" title="Click to download Dada Mail! (a free download!)"><img src="<!-- tmpl_var PROGRAM_URL -->/img/dada_mail_screenshot.jpg" style="border: 1px solid black;" border="0" height="345" width="500" alt="Dada Mail"></a> 
+</p>
 
- 
+<p>		
+	<a href="http://dadamailproject.com/">Dada Mail</a> is a Contemporary Mailing List Manager. <a href="http://dadamailproject.com/">Dada Mail</a> works brilliantly - especially when you want to run a verified, closed loop opt-in subscription-based mailing list that your subscribers can trust. <a href="http://dadamailproject.com/">Dada Mail</a> is also a conceptual art project. [<a href="http://dadamailproject.com/project">More Information</a>]
+</p>
+<p>
+	Dada Mail can help you manage a mailing list, offers complete support for safe, closed-loop opt-in subscrptions, send out mass mailings, keeps an archive of your messages and allows you to share your messages in lots of neat ways. Dada Mail runs on your web hosting account and you interact with it through your web browser.
+</p>
+<p>
+	Dada Mail is rich with features, but tries to Keep It Simple. Dada Mail is designed to favor flexibility, extensibility and ease-of-use over core speed or extremely flashy, but hard-to-use features.
+</p>
+<p>
+	Dada Mail is designed to be installed, setup and understood by regular people who have websites, but has enough advanced features to entice more proficient users. If you've ever installed a bulletin board or web blog software, you should be able to install Dada Mail without too many problems.
+</p>
+<p>
+	Dada Mail is free software that you're able to use, modify, share and enhance under the terms of the GNU General Public License. Dada Mail is written in Perl because we love Perl.
+</p>
 
-   <a href="http://dadamailproject.com/download" title="Click to download Dada Mail! (a free download!)">
-    <img src="<!-- tmpl_var PROGRAM_URL -->/img/dada_mail_screenshot.jpg" style="border: 1px solid black; margin: 7px; float: right;" border="0" height="297" width="300" alt="Dada Mail" />
-  </a>
-  
-  <a href="http://dadamailproject.com/">Dada Mail</a> is an intuitive, web-based e-mail list management system, which
-    runs on any hosting account that can execute custom CGI scripts. <a href="http://dadamailproject.com/">Dada Mail</a>
-    is also a conceptual art project. [<a href="http://dadamailproject.com/project">More Information</a>]</p>
- 
- <p><a href="http://dadamailproject.com/">Dada Mail</a> handles Closed-Loop Opt-in/Opt-out subscriptions, sending complex announce-only
-    and/or discussion mailing list messages, archiving, viewing, searching, resending, syndicating,
-    (rss, atom) sent messages and doing all this and more  with <em>style</em>.    </p>
-  
-  <p>
-  <a href="http://dadamailproject.com/">
-   Dada Mail
-  </a>
-  
-  produces XHTML valid web content and sticks to best practices
-    when creating email messages. Write <strong>Once</strong>: Distribute <strong>Everywhere</strong>.
-      <a href="http://dadamailproject.com/">Dada Mail</a> is free software that you're able to use, modify and enhance
-    under the terms of the GNU General Public License. </p>
-    
 
 <!-- end what_is_dada_mail.tmpl -->
