--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -294,7 +294,11 @@ If using either the SQL backends, make sure to create a new database before conf
 				The SQL information below is correct, but there are tables in this database that correspond to the tables that Dada Mail requires.
 			</p>
 			<p>
-				<input type="checkbox" name="skip_configure_SQL" id="skip_configure_SQL" value="1"><label>I know these tables already exist.</label><br>
+				<input type="checkbox" name="skip_configure_SQL" id="skip_configure_SQL" value="1">
+				 <label for="skip_configure_SQL">
+				  I know these tables already exist.
+				 </label>
+				<br />
 				Use these existing tables, instead of making new ones.
 			</p>
 		</li>
