Closes #139 Textual glitch

--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -613,7 +613,7 @@ If someone not currently subscribed to your mailing list attempts to unsubscribe
      </label>
      <br />
      After a person unsubscribes, an email will be sent to them 
-     to announce the subscription.
+     to announce the unsubscription.
     </p>
    </td>
   </tr>
