--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -57,9 +57,10 @@
       Close Your List
      </label>
      <br/>
-     No one will be allowed to subscribe to this list. 
+     No one will be allowed to subscribe to this mailing list. You will not be able to 
+	send mailing list invitations. 
      Subscribers can only be added via the administration 
-     control panel. People can still unsubscribe at any time.
+     control panel. People may still unsubscribe at any time.
     </p>
    </td>
   </tr>
