closes #160 Link to Add Authorized Senders not available if they're aren't any, yet

--- a/dada/DADA/Template/templates/list_type_switch_widget.tmpl
+++ b/dada/DADA/Template/templates/list_type_switch_widget.tmpl
@@ -115,7 +115,7 @@
  
  --> 
  
- <!-- tmpl_if enable_authorized_sending -->
+ <!-- tmpl_if list_settings.enable_authorized_sending -->
 	 <div>
 	  
 	<!-- tmpl_if list_type_isa_authorized_senders -->
