"Clickthrough Tracking" plugin is now called, "Tracker" - long live "Clickthrough Tracking"

--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -470,8 +470,8 @@ $ADMIN_MENU = [
 #					},
 
 
-#					{-Title      => 'Clickthrough Tracking',
-#					 -Title_URL  => $PLUGIN_URL."/clickthrough_tracking.cgi",
+#					{-Title      => 'Tracker',
+#					 -Title_URL  => $PLUGIN_URL."/tracker",
 #					 -Function   => 'clickthrough_tracking',
 #					 -Activated  => 1,
 #					},
