Closes #165 - broken link to Tracker plugin in example_dada_config.tmpl template

--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -477,8 +477,8 @@ $ADMIN_MENU = [
 
 
 #					{-Title      => 'Tracker',
-#					 -Title_URL  => $PLUGIN_URL."/tracker",
-#					 -Function   => 'clickthrough_tracking',
+#					 -Title_URL  => $PLUGIN_URL."/tracker.cgi",
+#					 -Function   => 'tracker',
 #					 -Activated  => 1,
 #					},
 
