little fix for this screen, added "begin" and "end" comments

--- a/dada/DADA/Template/templates/error_sql_connect_error_screen.tmpl
+++ b/dada/DADA/Template/templates/error_sql_connect_error_screen.tmpl
@@ -1,3 +1,5 @@
+<!-- begin error_sql_connect_error_screen.tmpl --> 
+
 <h2>SQL Connect Error</h2>
 
 <!-- tmpl_set name="title" value="There Seems to be a Problem" -->
@@ -14,3 +16,5 @@
 <pre>
 	<!-- tmpl_var error_message --> 
 </pre> 
+
+<!-- end error_sql_connect_error_screen.tmpl --> 
